Refactor routes and middleware
